--- a/info.yaml
+++ b/info.yaml
@@ -3,9 +3,8 @@
 project:
   wokwi_id:    0        # If using wokwi, set this to your project's ID
   source_files:        # If using an HDL, set wokwi_id as 0 and uncomment and list your source files here. Source files must be in ./src
-    - counter.v
-    - decoder.v
-  top_module:  "seven_segment_seconds"      # put the name of your top module here, make it unique by prepending your github username
+    - cpu.sv
+  top_module:  "noahgaertner_cpu"      # put the name of your top module here, make it unique by prepending your github username
 
 # As everyone will have access to all designs, try to make it easy for someone new to your design to know what
 # it does and how to operate it.
@@ -14,33 +13,33 @@ project:
 #
 # This info will be automatically collected and used to make a datasheet for the chip.
 documentation: 
-  author:       "Matt Venn"      # Your name
-  discord:      "mattvenn#1907"      # Your discord handle
-  title:        "7 segment seconds"      # Project title
-  description:  "count up to 10, one second at a time"      # Short description of what your project does
-  how_it_works: "uses a register and some combinational logic"      # Longer description of how the project works
-  how_to_test:  "after reset, the counter should increase by one every second"      # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
-  external_hw:  ""      # Describe any external hardware needed
-  language:     "verilog" # other examples include Verilog, Amaranth, VHDL, etc
+  author:       "Noah Gaertner"      # Your name
+  discord:      "Neptun0-#1146"      # Your discord handle
+  title:        "Basic 4 bit cpu "      # Project title
+  description:  "4-bit CPU that does add, subtract, multiply, left and right shifts, MAC, and conditional jumps"      # Short description of what your project does
+  how_it_works: "comparch stuff idk, need to get this in by deadline, will update later"      # Longer description of how the project works
+  how_to_test:  "write a program. try to run."      # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
+  external_hw:  "test pattern generator, output reader (will probably work with arduino)"      # Describe any external hardware needed
+  language:     "SystemVerilog" # other examples include Verilog, Amaranth, VHDL, etc
   doc_link:     ""      # URL to longer form documentation, eg the README.md in your repository
   clock_hz:     1000       # Clock frequency in Hz (if required)
   picture:      ""      # relative path to a picture in your repository
   inputs:               # a description of what the inputs do
     - clock
     - reset
-    - none
-    - none
-    - none
-    - none
-    - none
-    - none
+    - instruction
+    - instruction
+    - data
+    - data
+    - data
+    - data
   outputs:
-    - segment a         # a description of what the outputs do
-    - segment b
-    - segment c
-    - segment d
-    - segment e
-    - segment f
-    - segment g
-    - none
+    - program counter        # a description of what the outputs do
+    - program counter
+    - program counter
+    - program counter
+    - output data
+    - output data
+    - output data
+    - output data
 
