--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ TOPLEVEL_LANG ?= verilog
 VERILOG_SOURCES += $(PWD)/tb.v $(PWD)/counter.v $(PWD)/decoder.v
 
 # TOPLEVEL is the name of the toplevel module in your Verilog or VHDL file
-TOPLEVEL = tb
+TOPLEVEL = noahgaertner_cpu
 
 # MODULE is the basename of the Python test file
 MODULE = test
