--- a/info.yaml
+++ b/info.yaml
@@ -16,14 +16,14 @@ documentation:
   author:       "Noah Gaertner"      # Your name
   discord:      "Neptun0-#1146"      # Your discord handle
   title:        "Basic 4 bit cpu "      # Project title
-  description:  "4-bit CPU that does add, subtract, multiply, left and right shifts, and conditional jumps"      # Short description of what your project does
+  description:  "4-bit CPU that does add, subtract, multiply, left and right shifts, conditional jump based on external signal, logical and bitwise AND and OR, equality and inequality checking, bitwise inversion, and logical NOT"      # Short description of what your project does
   how_it_works: "Implements a highly reduced ISA that fits on the limited allowed space, and uses a 4-bit bus to get the program and data values in and out of the chip, in addition to a two bit bus to tell it what to do at any given time, as well as a clock and reset signal"      # Longer description of how the project works
   how_to_test:  "Write a program for the ISA and try to run it! Remember you need to synchronously RESET and then SETRUNPT to the proper value before you try to do anything!"      # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
-  external_hw:  "test pattern generator, output reader (will probably work with arduino)"      # Describe any external hardware needed
+  external_hw:  "test pattern generator, output reader (will probably work with just an arduino for both)"      # Describe any external hardware needed
   language:     "SystemVerilog" # other examples include Verilog, Amaranth, VHDL, etc
-  doc_link:     "see readme"      # URL to longer form documentation, eg the README.md in your repository
-  clock_hz:     50K       # Clock frequency in Hz (if required)
-  picture:      "update later"      # relative path to a picture in your repository
+  doc_link:     "https://github.com/noahgaertner/tt02-verilog-demo/blob/main/README.md"      # URL to longer form documentation, eg the README.md in your repository
+  clock_hz:     50K (or lower, whatever)       # Clock frequency in Hz (if required)
+  picture:      "docs/pic.png"      # relative path to a picture in your repository
   inputs:               # a description of what the inputs do
     - clock
     - reset
